force-app/main/default/objects/User/fields/Line_of_Business_Code__c.field-meta.xml
<CustomField>
    <fullName>Line_of_Business_Code__c</fullName>
    <label>Line of Business Code</label>
    <length>1</length>
    <type>Text</type>
</CustomField>