force-app/main/default/objects/User/fields/Warehouse__c.field-meta.xml
<CustomField>
    <fullName>Warehouse__c</fullName>
    <description>This field contains the default warehouse of a user. It is used to create PO</description>
    <inlineHelpText>Default Warehouse for Purchase Orders</inlineHelpText>
    <label>Warehouse</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Warehouse</valueSetName>
    </valueSet>
</CustomField>