force-app/main/default/objects/User/fields/Warehouse_Text__c.field-meta.xml
<CustomField>
    <fullName>Warehouse_Text__c</fullName>
    <description>This field is used in Create PO flow as FSL flow cannot reference a picklist value in formulas</description>
    <formula>TEXT(Warehouse__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Warehouse Text</label>
    <type>Text</type>
</CustomField>