force-app/main/default/objects/User/validationRules/VR_USE01_EmployeeNumber.validationRule-meta.xml
<ValidationRule>
    <fullName>VR_USE01_EmployeeNumber</fullName>
    <active>true</active>
    <errorConditionFormula>ISBLANK(EmployeeNumber)</errorConditionFormula>
    <errorDisplayField>EmployeeNumber</errorDisplayField>
    <errorMessage>Please input Pronto Employee code.</errorMessage>
</ValidationRule>