force-app/main/default/objects/User/listViews/All_Other_Users.listView-meta.xml
<ListView>
    <fullName>All_Other_Users</fullName>
    <columns>FULL_NAME</columns>
    <columns>CORE.USERS.USERNAME</columns>
    <columns>CORE.USERS.LAST_LOGIN</columns>
    <columns>CORE.USERS.ACTIVE</columns>
    <columns>CORE.PROFILE.NAME</columns>
    <columns>LOCALE</columns>
    <columns>TIMEZONE</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CORE.USERS.ACTIVE</field>
        <operation>equals</operation>
        <value>1</value>
    </filters>
    <filters>
        <field>CORE.PROFILE.NAME</field>
        <operation>equals</operation>
        <value>Executive,Finance,NOC Admin</value>
    </filters>
    <label>All Other Users</label>
</ListView>